feat(i18n): complete Instructors tab translation in ClassManagement
- Translated instructor stats cards:
  * Total Instructors, Active Instructors, Average Rating, Specializations

- Translated section header and action buttons:
  * Add New Instructor button
  * SPARTA role requirement messages

- Translated search and filters:
  * Search placeholder
  * Status filter dropdown (All Statuses, Active, Inactive, Busy)

- Translated instructor cards:
  * Status badges with dynamic translation (active, inactive, busy)
  * Experience years label
  * Email and Phone labels
  * Specializations and Availability section labels
  * Action buttons: Edit, Schedule, Delete
  * SPARTA access required message

- Translated empty states:
  * No instructors found title
  * Filter adjustment message
  * Add first instructor message and button

- Added new translation keys:
  * spartaOnly, spartaAccessRequired
  * experienceYears, specializationsLabel, availabilityLabel
  * avgRating, specializations stats
  * filters: allStatus, active, inactive, busy
  * emptyState: filterMessage, addFirstMessage, addButton
  * actions: schedule

- All 3 languages updated consistently (en, az, ru)
- Instructors tab now fully translated

Next: Instructor modal, Schedule tab, remaining modals

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -772,17 +772,29 @@
         }
       },
       "instructors": {
-        "title": "Təlimçilərin Idarəetməsi",
+        "title": "Təlimçi İdarəetməsi",
         "lastUpdated": "Son yenilənmə: {{time}}",
         "addButton": "Yeni Təlimçi Əlavə Et",
+        "spartaOnly": "Təlimçi idarəetməsi üçün SPARTA rolu tələb olunur",
+        "experienceYears": " il təcrübə",
+        "specializationsLabel": "İxtisaslar",
+        "availabilityLabel": "Əlçatanlıq",
         "stats": {
           "totalInstructors": "Ümumi Təlimçilər",
           "activeInstructors": "Aktiv Təlimçilər",
           "avgExperience": "Orta Təcrübə",
+          "avgRating": "Orta Reytinq",
+          "specializations": "İxtisaslar",
           "years": "İl"
         },
         "search": {
           "placeholder": "Təlimçiləri axtar..."
+        },
+        "filters": {
+          "allStatus": "Bütün Statuslar",
+          "active": "Aktiv",
+          "inactive": "Qeyri-aktiv",
+          "busy": "Məşğul"
         },
         "table": {
           "nameColumn": "Ad",
@@ -793,11 +805,16 @@
         },
         "actions": {
           "edit": "Redaktə Et",
-          "delete": "Sil"
+          "delete": "Sil",
+          "schedule": "Cədvəl"
         },
+        "spartaAccessRequired": "SPARTA girişi tələb olunur",
         "emptyState": {
           "title": "Təlimçi Tapılmadı",
-          "description": "Mövcud təlimçi yoxdur."
+          "description": "Mövcud təlimçi yoxdur.",
+          "filterMessage": "Daha çox nəticə görmək üçün filterlərinizi tənzimləyin.",
+          "addFirstMessage": "Başlamaq üçün ilk təlimçini əlavə edin.",
+          "addButton": "İlk Təlimçinizi Əlavə Edin"
         },
         "deleteConfirm": {
           "title": "Təlimçini Sil",
