feat(i18n): translate Assign modal, Schedule tab, and UI improvements
**Assign Instructors Modal**:
- Fixed user-unfriendly tech variable display
- Translated modal title: 'Assign Instructors to {className}'
- Translated all status messages:
  * currentInstructors, maxInstructors, moreCanAssign
  * FULL/AVAILABLE status badges
  * Assigned/Assign button states
  * Maximum allowed warning
- Translated 'years' experience display
- Done button translated

**Schedule Assignment Modal**:
- Translated title: 'Class Assignment for {name}'
- Translated subtitle: 'Manage instructor's class schedule'

**Classes Tab Enhancements**:
- Translated 'Show less' and 'Show more days' buttons
- Translated '+{count} more' dynamic counter
- Delete Class Confirmation dialog title translated

**Schedule Tab - COMPLETE**:
- Translated all stats cards:
  * Total Slots, Scheduled, Completed, Total Enrollments
- Translated section title: 'Weekly Schedule'
- Translated 'Add Schedule Slot' button
- Translated 'Loading schedule...' state
- Translated day names dynamically (Monday-Sunday)
- Translated '{count} slots' counter
- Translated 'No classes scheduled' empty state
- Translated '{count} enrolled' member counter
- Translated all action button tooltips:
  * View Roster, Edit, Delete

**New Translation Keys Added** (all 3 languages):
- assignModal: maxInstructors, moreCanAssign, full, available, assigned, assign, maxAllowed, done
- scheduleAssignModal: title, subtitle
- classes: showLess, showMoreDays, moreCount
- schedule.stats: totalSlots, scheduled, completed, totalEnrollments
- schedule: loadingSchedule, slotsCount, noClasses, enrolled

All translations applied to English, Azerbaijani, Russian

Next: Instructor modal, remaining modals, Edit Class description

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -710,6 +710,9 @@
         },
         "spotsLeft": "{{count}} yer qalıb",
         "noInstructors": "Təlimçi təyin edilməyib",
+        "showLess": "Daha az göstər",
+        "showMoreDays": "Daha çox gün göstər",
+        "moreCount": "+{{count}} daha",
         "table": {
           "nameColumn": "Sinif Adı",
           "categoryColumn": "Kateqoriya",
@@ -861,6 +864,16 @@
         "title": "Həftəlik Cədvəl",
         "lastUpdated": "Son yenilənmə: {{time}}",
         "addButton": "Cədvəl Slotu Əlavə Et",
+        "loadingSchedule": "Cədvəl yüklənir...",
+        "slotsCount": "{{count}} slot",
+        "noClasses": "Sinif planlaşdırılmayıb",
+        "enrolled": "{{count}} qeydiyyatlı",
+        "stats": {
+          "totalSlots": "Ümumi Slotlar",
+          "scheduled": "Planlaşdırılmış",
+          "completed": "Tamamlanmış",
+          "totalEnrollments": "Ümumi Qeydiyyatlar"
+        },
         "filters": {
           "day": "Gün:",
           "allDays": "Bütün Günlər",
@@ -954,15 +967,27 @@
         "closeButton": "Bağla"
       },
       "assignModal": {
-        "title": "{{className}} üçün Təlimçi Təyin Et",
-        "currentInstructors": "Cari Təlimçilər",
+        "title": "Təlimçiləri təyin edin",
+        "currentInstructors": "Təlimçilər",
         "availableInstructors": "Mövcud Təlimçilər",
         "noInstructors": "Təlimçi təyin edilməyib",
+        "maxInstructors": "Maksimum təlimçi təyin edilib",
+        "moreCanAssign": "{{count}} daha çox təyin edilə bilər",
+        "full": "DOLU",
+        "available": "MÖVCUD",
+        "assigned": "Təyin edilib",
+        "assign": "Təyin Et",
+        "maxAllowed": "Maksimum 5 təlimçiyə icazə verilir",
         "actions": {
           "assign": "Təyin Et",
           "remove": "Sil",
-          "close": "Bağla"
+          "close": "Bağla",
+          "done": "Hazır"
         }
+      },
+      "scheduleAssignModal": {
+        "title": "{{name}} üçün Sinif Təyinatı",
+        "subtitle": "Təlimçinin sinif cədvəlini idarə edin"
       },
       "common": {
         "loading": "Yüklənir...",
